blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  # take all the given pods that I created
  selector:
    matchLabels:
      app: client
  # configuration that is going to be applyed to all the pods
  # that deployment going to make
  template:
    metadata:
      labels:
        app: client
    # pod spec that
    spec:
      containers:
        - name: client
          image: digzom/client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
