blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  # take all the given pods that I created
  selector:
    matchLabels:
      app: comments
  # configuration that is going to be applyed to all the pods
  # that deployment going to make
  template:
    metadata:
      labels:
        app: comments
    # pod spec that
    spec:
      containers:
        - name: comments
          image: digzom/comments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
