blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  # take all the given pods that I created
  selector:
    # with the labels that match event-bus
    matchLabels:
      app: event-bus
  # configuration that is going to be applyed to all the pods
  # that deployment going to make
  template:
    metadata:
      labels:
        app: event-bus
    # pod spec that
    spec:
      containers:
        - name: event-bus
          image: digzom/event-bus:latest

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
