blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  # take all the given pods that I created
  selector:
    matchLabels:
      app: query
  # configuration that is going to be applyed to all the pods
  # that deployment going to make
  template:
    metadata:
      labels:
        app: query
    # pod spec that
    spec:
      containers:
        - name: query
          image: digzom/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
